ci(ci): ENVを設定しないとastro syncが実行できない

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,6 +8,9 @@ on:
     types: [opened, synchronize, reopened]
   workflow_dispatch:
 
+env:
+  ENV: local
+
 defaults:
   run:
     working-directory: "./"
