--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,8 +23,8 @@
   // Lint On Save
   "editor.formatOnSave": false,
   "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true,
-    "source.fixAll.stylelint": true
+    "source.fixAll.eslint": "explicit",
+    "source.fixAll.stylelint": "explicit"
   },
   "[typescript][javascript][typescriptreact][javascriptreact][css][scss][jsonc][json][markdown][mdx][yaml][astro]": {
     "editor.formatOnSave": true,
