--- a/apps/blog/package.json
+++ b/apps/blog/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "astro dev",
+    "dev": "ENV=local astro dev",
     "start": "astro dev",
     "build": "astro build",
     "watch:typecheck": "pnpm /^watch:typecheck:.*/",
