fix ci for monorepo

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -52,7 +52,7 @@ jobs:
         run: pnpm i --frozen-lockfile
 
       - name: Create astro content files
-        run: pnpm astro sync
+        run: pnpm --filter blog astro sync
 
       - name: lint
         run: pnpm lint
