--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
   "scripts": {
     "dev": "turbo run dev",
     "lint": "pnpm /^lint:.*/",
-    "lint:prettier": "prettier '**/*.{tsx,ts,mjs,cjs,js,json,css,scss,yml,yaml,md}' --check",
+    "lint:prettier": "pnpm run:prettier . --check",
     "lint:cspell": "cspell lint './**/*.{tsx,ts,mjs,cjs,js,json,css,scss,yml,yaml,md}' --gitignore --cache",
     "lint:turbo": "turbo run lint",
     "fix": "pnpm /^fix:.*/",
-    "fix:prettier": "prettier '**/*.{tsx,ts,mjs,cjs,js,json,css,scss,yml,yaml,md}' --write",
+    "fix:prettier": "pnpm run:prettier . --write",
     "fix:turbo": "turbo run fix",
+    "run:prettier": "prettier --ignore-unknown --no-error-on-unmatched-pattern --cache",
     "typecheck": "turbo run typecheck",
     "build": "turbo run build",
     "test": "turbo run test",
