feat: possible to get and search content from article's exported methods.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,7 +22,7 @@
     "flags": ["unstable_ts_config"]
   },
   // prettier
-  "prettier.configPath": ".prettierrc.mjs",
+  "prettier.configPath": ".prettierrc.js",
   // autofix
   "editor.formatOnSave": false,
   "[typescript][javascript][typescriptreact][javascriptreact][jsonc][json][markdown][mdx][yaml]": {
