--- a/packages/articles/package.json
+++ b/packages/articles/package.json
@@ -5,10 +5,10 @@
   "type": "module",
   "exports": {
     ".": {
+      "kimuson-dev/src": "./src/index.ts",
       "import": "./dist/index.js",
       "require": "./dist/index.cjs",
-      "default": "./dist/index.js",
-      "kimuson-dev/src": "./src/index.ts"
+      "default": "./dist/index.js"
     }
   },
   "scripts": {
@@ -29,5 +29,8 @@
     "tsup": "^8.3.5",
     "tsx": "^4.19.2",
     "valibot": "1.0.0-beta.9"
+  },
+  "dependencies": {
+    "es-toolkit": "^1.31.0"
   }
 }
