--- a/packages/articles/package.json
+++ b/packages/articles/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@types/fs-extra": "^11.0.4",
     "@types/glob": "^8.1.0",
+    "@types/jsdom": "^21.1.7",
     "@types/node": "^22.10.5",
     "fs-extra": "^11.2.0",
     "glob": "^11.0.0",
@@ -32,6 +33,7 @@
     "valibot": "1.0.0-beta.9"
   },
   "dependencies": {
-    "es-toolkit": "^1.31.0"
+    "es-toolkit": "^1.31.0",
+    "jsdom": "^24.1.1"
   }
 }
