feat: enhance blog article functionality and styling
- Added support for Open Graph Protocol (OGP) image fetching to enrich article previews.
- Introduced new dependencies: 'image-size' and 'jsdom' for image dimension handling and OGP data retrieval.
- Updated article page to display OGP data, including title, description, and images.
- Improved search functionality with English placeholder text.
- Enhanced global styles for better typography and layout consistency.
- Refactored article content rendering to support dynamic OGP links.
- Updated package.json files to include new dependencies and configurations.

--- a/packages/articles/package.json
+++ b/packages/articles/package.json
@@ -43,6 +43,7 @@
   "dependencies": {
     "es-toolkit": "^1.31.0",
     "find-package-json": "^1.2.0",
+    "image-size": "^1.2.0",
     "jsdom": "^24.1.1"
   }
 }
