--- a/apps/blog-v2/package.json
+++ b/apps/blog-v2/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -11,8 +11,12 @@
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.1",
+    "@types/jsdom": "^21.1.7",
+    "articles": "workspace:*",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "image-size": "^1.2.0",
+    "jsdom": "^24.1.1",
     "lucide-react": "^0.469.0",
     "next": "15.1.3",
     "react": "^19.0.0",
@@ -22,7 +26,7 @@
     "react-syntax-highlighter": "^15.6.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "articles": "workspace:*"
+    "valibot": "1.0.0-beta.10"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
