--- a/packages/articles/package.json
+++ b/packages/articles/package.json
@@ -21,13 +21,12 @@
   "scripts": {
     "build": "pnpm generate && tsup --clean",
     "typecheck": "tsc -p . --noEmit",
-    "generate": "rimraf summary && GITHUB_TOKEN=$(gh auth token) tsx src/scripts/generate-summary/index.ts"
+    "generate": "rimraf summary && tsx src/scripts/generate-summary/index.ts"
   },
   "devDependencies": {
     "@types/find-package-json": "^1.2.6",
     "@types/fs-extra": "^11.0.4",
     "@types/glob": "^8.1.0",
-    "@types/jsdom": "^21.1.7",
     "@types/node": "^22.10.5",
     "fs-extra": "^11.2.0",
     "glob": "^11.0.0",
@@ -44,6 +43,6 @@
     "es-toolkit": "^1.31.0",
     "find-package-json": "^1.2.0",
     "image-size": "^1.2.0",
-    "jsdom": "^24.1.1"
+    "open-graph-scraper": "^6.8.3"
   }
 }
