feat: rename blog v2 to blog
- Created a new blog application under the @kimuson.dev scope using Next.js.
- Integrated Tailwind CSS for styling and layout.
- Added essential components including Header, Footer, and AboutMeCard.
- Implemented global styles and layout structure for the blog.
- Configured ESLint and Prettier for code quality and formatting.
- Established a basic routing structure for blog articles and projects.
- Included Open Graph Protocol support for enhanced article previews.
- Added various assets including images and SVGs for branding and content.
- Set up initial configuration files for project management and dependency handling.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -51,11 +51,11 @@ jobs:
       - name: Install dependencies
         run: pnpm i --frozen-lockfile
 
-      - name: Create astro content files
-        run: pnpm --filter blog astro sync
-
       - name: lint
         run: pnpm lint
 
       - name: typecheck
         run: pnpm typecheck
+
+      - name: build check
+        run: pnpm build
