required dependent build before typecheck and test

--- a/turbo.json
+++ b/turbo.json
@@ -12,7 +12,11 @@
     },
     "lint": {},
     "fix": {},
-    "typecheck": {},
-    "test": {}
+    "typecheck": {
+      "dependsOn": ["^build"]
+    },
+    "test": {
+      "dependsOn": ["^build"]
+    }
   }
 }
