--- a/apps/blog/package.json
+++ b/apps/blog/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.1",
-    "articles": "workspace:*",
+    "@kimuson.dev/articles": "workspace:*",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "image-size": "^1.2.0",
