--- a/apps/blog/tsconfig.json
+++ b/apps/blog/tsconfig.json
@@ -21,7 +21,7 @@
     "paths": {
       "@/*": ["./src/*"]
     },
-    "customConditions": ["kimuson-dev/src"]
+    "customConditions": ["@kimuson-dev/src"]
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
