--- a/packages/articles/tsconfig.json
+++ b/packages/articles/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
-  "extends": "tsconfig/base.json",
+  "extends": "@kimuson.dev/tsconfig/base.json",
   "compilerOptions": {
     "noEmit": true,
     "resolveJsonModule": true
