--- a/apps/blog/package.json
+++ b/apps/blog/package.json
@@ -30,6 +30,7 @@
     "valibot": "1.0.0-beta.10"
   },
   "devDependencies": {
+    "@kimuson.dev/tsconfig": "workspace:*",
     "@eslint/eslintrc": "^3.2.0",
     "@types/node": "^22.10.5",
     "@types/react": "^19.0.2",
