--- a/apps/blog/tsconfig.json
+++ b/apps/blog/tsconfig.json
@@ -1,18 +1,13 @@
 {
+  "extends": "@kimuson.dev/tsconfig/base.json",
   "compilerOptions": {
-    "target": "ES2017",
+    "target": "ESNext",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
-    "skipLibCheck": true,
-    "strict": true,
-    "noEmit": true,
-    "esModuleInterop": true,
-    "module": "esnext",
-    "moduleResolution": "bundler",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "jsx": "preserve",
     "incremental": true,
+    "preserveSymlinks": false,
+    "noEmit": true,
+    "jsx": "preserve",
     "plugins": [
       {
         "name": "next"
@@ -20,8 +15,7 @@
     ],
     "paths": {
       "@/*": ["./src/*"]
-    },
-    "customConditions": ["@kimuson-dev/src"]
+    }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
