fix codegeneration problem

--- a/turbo.json
+++ b/turbo.json
@@ -8,7 +8,13 @@
     },
     "build": {
       "dependsOn": ["^build"],
-      "outputs": [".next/**", "!.next/cache/**", "out/**", "dist/**"]
+      "outputs": [
+        ".next/**",
+        "!.next/cache/**",
+        "out/**",
+        "dist/**",
+        "summary/**"
+      ]
     },
     "lint": {},
     "fix": {},
