--- a/apps/blog/package.json
+++ b/apps/blog/package.json
@@ -11,9 +11,9 @@
     "typecheck": "tsc -p ./tsconfig.json --noEmit"
   },
   "dependencies": {
+    "@kimuson.dev/articles": "workspace:*",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.1",
-    "@kimuson.dev/articles": "workspace:*",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "image-size": "^1.2.0",
@@ -30,8 +30,8 @@
     "valibot": "1.0.0-beta.10"
   },
   "devDependencies": {
-    "@kimuson.dev/tsconfig": "workspace:*",
     "@eslint/eslintrc": "^3.2.0",
+    "@kimuson.dev/tsconfig": "workspace:*",
     "@types/node": "^22.10.5",
     "@types/react": "^19.0.2",
     "@types/react-dom": "^19.0.2",
@@ -40,6 +40,7 @@
     "eslint-config-next": "15.1.3",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "wrangler": "^4.20.0"
   }
 }
