--- a/apps/blog/package.json
+++ b/apps/blog/package.json
@@ -8,14 +8,21 @@
     "start": "next start",
     "lint": "next lint",
     "fix": "next lint --fix",
-    "typecheck": "tsc -p ./tsconfig.json --noEmit"
+    "typecheck": "tsc -p ./tsconfig.json --noEmit",
+    "generate:ogp": "tsx src/scripts/ogp-generator/index.ts --batch",
+    "deploy:production": "wrangler deploy",
+    "deploy:preview": "wrangler versions upload"
   },
   "dependencies": {
     "@kimuson.dev/articles": "workspace:*",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.1",
+    "budoux": "^0.7.0",
+    "canvas": "^3.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "glob": "^11.0.0",
+    "gray-matter": "^4.0.3",
     "image-size": "^1.2.0",
     "lucide-react": "^0.469.0",
     "next": "15.1.3",
@@ -27,6 +34,7 @@
     "react-syntax-highlighter": "^15.6.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "tsx": "^4.19.2",
     "valibot": "1.0.0-beta.10"
   },
   "devDependencies": {
