--- a/packages/articles/package.json
+++ b/packages/articles/package.json
@@ -21,9 +21,10 @@
   "scripts": {
     "build": "tsup --clean",
     "typecheck": "tsc -p . --noEmit",
-    "generate": "rimraf summary && tsx src/scripts/generate-summary/index.ts"
+    "generate:summary": "rimraf summary && tsx src/scripts/generate-summary/index.ts"
   },
   "devDependencies": {
+    "@kimuson.dev/tsconfig": "workspace:*",
     "@types/find-package-json": "^1.2.6",
     "@types/fs-extra": "^11.0.4",
     "@types/glob": "^8.1.0",
@@ -34,12 +35,13 @@
     "octokit": "^4.0.3",
     "rimraf": "^6.0.1",
     "rss-parser": "^3.13.0",
-    "@kimuson.dev/tsconfig": "workspace:*",
     "tsup": "^8.3.5",
     "tsx": "^4.19.2",
     "valibot": "1.0.0-beta.9"
   },
   "dependencies": {
+    "budoux": "^0.7.0",
+    "canvas": "^3.1.0",
     "es-toolkit": "^1.31.0",
     "find-package-json": "^1.2.0",
     "image-size": "^1.2.0",
