--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -55,7 +55,7 @@ jobs:
         run: pnpm lint
 
       - name: generate codes
-        run: pnpm --filter=@kimuson.dev/articles generate
+        run: pnpm --filter=@kimuson.dev/articles generate:summary
 
       - name: typecheck
         run: pnpm typecheck
