update wrangler.jsonc, change app name

--- a/apps/blog/wrangler.jsonc
+++ b/apps/blog/wrangler.jsonc
@@ -1,5 +1,5 @@
 {
-  "name": "kimuson-dev-blog",
+  "name": "kimuson-dev",
   "compatibility_date": "2025-04-01",
   "assets": {
     "directory": "./out",
