add VRT feature

--- a/.envrc
+++ b/.envrc
@@ -1,6 +1,5 @@
-# non-sensitive
-export ENV="local"
+#!/usr/bin/env bash
 
-if [ -f "./.envrc.personal" ]; then
-  source_env .envrc.personal
+if [ -f "./.env.secret" ]; then
+  dotenv ./.env.secret
 fi
