--- a/apps/blog/package.json
+++ b/apps/blog/package.json
@@ -11,7 +11,9 @@
     "typecheck": "tsc -p ./tsconfig.json --noEmit",
     "generate:ogp": "tsx src/scripts/ogp-generator/index.ts --batch",
     "deploy:production": "wrangler deploy",
-    "deploy:preview": "wrangler versions upload"
+    "deploy:preview": "wrangler versions upload",
+    "vrt:capture": "tsx ./vrt/main.ts",
+    "vrt:reg-suit": "reg-suit run"
   },
   "dependencies": {
     "@kimuson.dev/articles": "workspace:*",
@@ -41,15 +43,23 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
     "@kimuson.dev/tsconfig": "workspace:*",
+    "@playwright/test": "^1.53.0",
     "@types/node": "^22.10.5",
     "@types/react": "^19.0.2",
     "@types/react-dom": "^19.0.2",
     "@types/react-syntax-highlighter": "^15.5.13",
     "eslint": "^9.17.0",
     "eslint-config-next": "15.1.3",
+    "http-server": "^14.1.1",
+    "playwright": "^1.53.0",
     "postcss": "^8.4.49",
+    "reg-keygen-git-hash-plugin": "^0.14.3",
+    "reg-notify-github-plugin": "^0.14.4",
+    "reg-publish-s3-plugin": "^0.14.4",
+    "reg-suit": "^0.14.4",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.2",
+    "ulid": "^3.0.1",
     "wrangler": "^4.20.0"
   }
 }
