--- a/apps/blog/tsconfig.json
+++ b/apps/blog/tsconfig.json
@@ -17,6 +17,12 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "include": [
+    "next-env.d.ts",
+    "playwright.config.ts",
+    "src",
+    "vrt",
+    ".next/types/**/*.ts"
+  ],
+  "exclude": ["node_modules", "regconfig.json"]
 }
