--- a/package.json
+++ b/package.json
@@ -28,11 +28,18 @@
     "pnpm": ">=9.7.1"
   },
   "devDependencies": {
+    "@playwright/test": "^1.53.0",
     "cspell": "^8.14.1",
+    "http-server": "^14.1.1",
     "lefthook": "^1.7.14",
     "npm-run-all2": "^8.0.4",
+    "playwright": "^1.53.0",
     "prettier": "^3.3.3",
     "prettier-plugin-astro": "^0.12.3",
+    "reg-keygen-git-hash-plugin": "^0.14.3",
+    "reg-notify-github-plugin": "^0.14.4",
+    "reg-publish-s3-plugin": "^0.14.4",
+    "reg-suit": "^0.14.4",
     "turbo": "^2.3.3"
   },
   "license": "UNLICENSED"
