--- a/apps/blog/package.json
+++ b/apps/blog/package.json
@@ -18,11 +18,13 @@
   "dependencies": {
     "@kimuson.dev/articles": "workspace:*",
     "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-slot": "^1.1.1",
     "budoux": "^0.7.0",
     "canvas": "^3.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "glob": "^11.0.0",
     "gray-matter": "^4.0.3",
     "image-size": "^1.2.0",
