--- a/apps/blog/regconfig.json
+++ b/apps/blog/regconfig.json
@@ -9,7 +9,10 @@
     }
   },
   "plugins": {
-    "reg-keygen-git-hash-plugin": true,
+    "reg-simple-keygen-plugin": {
+      "expectedKey": "${EXPECTED_KEY}",
+      "actualKey": "${ACTUAL_KEY}"
+    },
     "reg-notify-github-plugin": {
       "prComment": true,
       "prCommentBehavior": "default",
