--- a/apps/blog/package.json
+++ b/apps/blog/package.json
@@ -58,6 +58,7 @@
     "postcss": "^8.4.49",
     "reg-notify-github-plugin": "^0.14.4",
     "reg-publish-s3-plugin": "^0.14.4",
+    "reg-simple-keygen-plugin": "^0.14.2",
     "reg-suit": "^0.14.4",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.2",
