--- a/.github/workflows/vrt-baseline-update.yml
+++ b/.github/workflows/vrt-baseline-update.yml
@@ -39,6 +39,7 @@ jobs:
 
       - name: run reg-suit
         env:
+          EXPECTED_KEY: baseline
           ACTUAL_KEY: baseline
           AWS_ACCESS_KEY_ID: ${{ secrets.CLOUDFLARE_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.CLOUDFLARE_SECRET_ACCESS_KEY }}
